fit: добавлен compose; также изменен frontend представление

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-blinker==1.8.2
-cassandra-driver==3.29.2
-click==8.1.7
-cqlsh==6.2.0
-Flask==3.0.3
-geomet==0.2.1.post1
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==3.0.2
-pure-sasl==0.6.2
-six==1.16.0
-wcwidth==0.2.13
-Werkzeug==3.1.1
+blinker
+cassandra-driver
+click
+cqlsh
+Flask
+geomet
+itsdangerous
+Jinja2
+MarkupSafe
+pure-sasl
+six
+wcwidth
+Werkzeug
